--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </ul>
         </section>
         <section class="section-about">
-            <h2 class="title">Чем мы занимаемся?</h2>
+            <h2 class="title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
                     <img src="./images/about/img-1.jpg" width="370" height="294" alt="Написание сайтов"/>
