--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </li>
             </ul>
         </section>
-        <section class="section-about">
+        <section class="section">
             <h2 class="title">Чем мы занимаемся</h2>
             <ul class="list">
                 <li>
@@ -63,7 +63,7 @@
                 </li>
              </ul>
         </section>
-        <section class="section-team">
+        <section class="section">
             <h2 class="title">Наша команда</h2>
             <ul class="list">
                 <li class="teammate">
